          regression of inserts into a Postgres / ::Replicated combination
        - Missing dependency check in t/60core.t (RT#62635)
        - Fix regressions in IC::DT registration logic
        - Fix regression in select-associated bind value handling (RT#61025)
        - Simplify SQL generated by some LIMITed prefetching queries
        - Fix infinite loops on old perls with a recent Try::Tiny
        - Improve "fork()" on Win32 by reimplementing a more robust DBIC
          thread support (still problematic, pending a DBI fix)
        - Properly quote table name on INSERT with no values
        - Work around possible Storage destruction warnings
        - Fix count of grouped resultsets using HAVING with aliases
        - Setting belongs_to columns/relationships no longer leaves the
          FK value and related object out of sync
        - Stop stripping newlines from SQL statements in the limit emulators
          as it is possible that custom sql with comments was provided
        - Add forgotten attributes to Admin.pm
        - Fix incorrect 'having' attribute documentation (RT#64129)
        - Improve fallback-to-master/return-to-slave reporting in
          ::Replicated::Balancer

    * Misc
        - Add extra option groups to DBIC::Optional::Depencencies, to aid
          users in requesting the prerequisites for a particular RDBMS
        - Switch all serialization to use Storable::nfreeze for portable
          architecture independent ice
        - Fix the bogus META.yml dependency injection issue for good
        - Refactor DBIx::Class::Storage::Statistics::debugfh() to be lazy

0.08124 2010-10-28 14:23 (UTC)
    * New Features / Changes
        - Add new -ident "function" indicating rhs is a column name
          { col => { -ident => 'othercol' } } vs { col => \'othercol' }
        - Extend 'proxy' relationship attribute
        - Use DBIx::Class::Storage::Debug::PrettyPrint when the
          environment variable DBIC_TRACE_PROFILE is set, see