@@ -34,6 +34,9 @@ Revision history for DBIx::Class
         - Fix regressions in IC::DT registration logic
         - Fix regression in select-associated bind value handling (RT#61025)
         - Simplify SQL generated by some LIMITed prefetching queries
+        - Throw an exception when a required group_by on a complex prefetch
+          can not be auto-constructed, instead of continuing to eventually
+          produce invalid SQL
         - Fix infinite loops on old perls with a recent Try::Tiny
         - Improve "fork()" on Win32 by reimplementing a more robust DBIC
           thread support (still problematic, pending a DBI fix)
